2006-07-20  Steve Fink <sphink@gmail.com>

	* testsuite/lib/ltrace.exp: better quoting and error detection for
	ltrace_verify_output's call to grep

2006-08-07  Steve Fink  <sphink@gmail.com>

	* ltrace.1: update bug email addr

2006-07-26  Ian Wienand  <ianw@debian.org>

	* elf.c: refactor opd2addr to not pass void* (fix warnings)

2006-07-18  Petr Machata <pmachata@redhat.com>

	* elf.c: replace nonexistant elf_plt2addr with opd2addr, fix
	typo, and fix WEAK symbol detection
	* sysdeps/linux-gnu/ppc/arch.h: define breakpoint instruction,
	its length, etc., also on ppc32

2006-07-18  Petr Machata <pmachata@redhat.com>

	* elf.c: support .gnu.hash ELF entry
	* elf.h: likewise

2006-07-18  Petr Machata  <pmachata@redhat.com>

	* options.c: don't hardcode version number

2006-07-18  Justin Pryzby <justinpryzby@users.sourceforge.net>

	* ltrace.1: make demagle clearer

2006-07-16  Steve Fink  <sphink@gmail.com>

	* options.c: implement -F flag for alternate config file(s)
	* ltrace.c: load SYSCONFDIR/ltrace.conf and ~/.ltrace.conf by default

2006-06-19  Ian Wienand  <ianw@ieee.org>

	* sysdeps/linux-gnu/mksyscallent: update, fix for ia64
	* sysdeps/linux-gnu/i386/syscallent.h: regenerate to 2.6.17
	* sysdeps/linux-gnu/i386/signalent.h: likewise
	* sysdeps/linux-gnu/arm/syscallent.h: likewise
	* sysdeps/linux-gnu/arm/signalent.h: likewise
	* sysdeps/linux-gnu/m68k/syscallent.h: likewise
	* sysdeps/linux-gnu/m68k/signalent.h: likewise
	* sysdeps/linux-gnu/ia64/syscallent.h: likewise
	* sysdeps/linux-gnu/ia64/signalent.h: likewise

2006-06-19  Heiko Carstens <heiko.carstens@de.ibm.com>

	* sysdeps/linux-gnu/s390/syscalls31.h: update to 2.6.17
	* sysdeps/linux-gnu/s390/syscalls64.h: ditto

2006-06-16  Justin Pryzby <justinpryzby@users.sourceforge.net>

	* ltrace.1: spelling fix
	* TODO: spelling fix

2006-06-14  Ian Wienand  <ianw@gelato.unsw.edu.au>

	* configure.ac: Bump version to 0.5 for Paull Gillam's PPC64
	non-exec PLT patch (as merged below).