@@ -11,19 +11,6 @@
 #include "output.h"
 #include "debug.h"
 
-/*
- *	"void"		ARGTYPE_VOID
- *	"int"		ARGTYPE_INT
- *	"uint"		ARGTYPE_UINT
- *	"long"		ARGTYPE_LONG
- *	"ulong"		ARGTYPE_ULONG
- *	"octal"		ARGTYPE_OCTAL
- *	"char"		ARGTYPE_CHAR
- *	"string"	ARGTYPE_STRING
- *	"format"	ARGTYPE_FORMAT
- *	"addr"		ARGTYPE_ADDR
- */
-
 struct function *list_of_functions = NULL;
 
 static struct list_of_pt_t {
@@ -51,7 +38,37 @@ static struct list_of_pt_t {
 	NULL, ARGTYPE_UNKNOWN}	/* Must finish with NULL */
 };
 
-static enum arg_type str2type(char **str)
+static arg_type_info arg_type_singletons[] = {
+	{ ARGTYPE_VOID },
+	{ ARGTYPE_INT },
+	{ ARGTYPE_UINT },
+	{ ARGTYPE_LONG },
+	{ ARGTYPE_ULONG },
+	{ ARGTYPE_OCTAL },
+	{ ARGTYPE_CHAR },
+	{ ARGTYPE_ADDR },
+	{ ARGTYPE_FILE },
+	{ ARGTYPE_FORMAT },
+	{ ARGTYPE_STRING },
+	{ ARGTYPE_STRING_N },
+	{ ARGTYPE_STRING0 },
+	{ ARGTYPE_STRING1 },
+	{ ARGTYPE_STRING2 },
+	{ ARGTYPE_STRING3 },
+	{ ARGTYPE_STRING4 },
+	{ ARGTYPE_STRING5 },
+	{ ARGTYPE_UNKNOWN }
+};
+
+arg_type_info *lookup_singleton(enum arg_type at)
+{
+	if (at >= 0 && at <= ARGTYPE_COUNT)
+		return &arg_type_singletons[at];
+	else
+		return &arg_type_singletons[ARGTYPE_COUNT]; /* UNKNOWN */
+}
+
+static arg_type_info *str2type(char **str)
 {
 	struct list_of_pt_t *tmp = &list_of_pt[0];
 
@@ -59,11 +76,11 @@ static enum arg_type str2type(char **str)
 		if (!strncmp(*str, tmp->name, strlen(tmp->name))
 		    && index(" ,)#", *(*str + strlen(tmp->name)))) {
 			*str += strlen(tmp->name);
-			return tmp->pt;
+			return lookup_singleton(tmp->pt);
 		}
 		tmp++;
 	}
-	return ARGTYPE_UNKNOWN;
+	return lookup_singleton(ARGTYPE_UNKNOWN);
 }
 
 static void eat_spaces(char **str)
@@ -105,8 +122,45 @@ static char *start_of_arg_sig(char *str)
 	return (stacked == 0) ? pos : NULL;
 }
 
+/*
+  Decide whether a type needs any additional parameters.
+  For now, we do not parse any nontrivial argument types.
+*/
+static int simple_type(enum arg_type at)
+{
+	return 1;
+}
+
 static int line_no;
 static char *filename;
+
+static arg_type_info *parse_type(char **str)
+{
+	arg_type_info *simple;
+	arg_type_info *info;
+
+	simple = str2type(str);
+	if (simple->type == ARGTYPE_UNKNOWN) {
+		return simple;		// UNKNOWN
+	}
+
+	if (simple_type(simple->type))
+		return simple;
+
+	info = malloc(sizeof(*info));
+	info->type = simple->type;
+
+	/* Code to parse parameterized types will go into the following
+	   switch statement. */
+
+	switch (info->type) {
+	default:
+		output_line(0, "Syntax error in `%s', line %d: Unknown type encountered",
+			    filename, line_no);
+		free(info);
+		return NULL;
+	}
+}
 
 static struct function *process_line(char *buf)
 {
@@ -119,12 +173,12 @@ static struct function *process_line(char *buf)
 	line_no++;
 	debug(3, "Reading line %d of `%s'", line_no, filename);
 	eat_spaces(&str);
-	fun.return_type = str2type(&str);
-	if (fun.return_type == ARGTYPE_UNKNOWN) {
+	fun.return_info = parse_type(&str);
+	if (fun.return_info == NULL) {
 		debug(3, " Skipping line %d", line_no);
 		return NULL;
 	}
-	debug(4, " return_type = %d", fun.return_type);
+	debug(4, " return_type = %d", fun.return_info->type);
 	eat_spaces(&str);
 	tmp = start_of_arg_sig(str);
 	if (!tmp) {
@@ -148,9 +202,10 @@ static struct function *process_line(char *buf)
 		} else if (fun.params_right) {
 			fun.params_right++;
 		}
-		fun.arg_types[i] = str2type(&str);
-		if (fun.return_type == ARGTYPE_UNKNOWN) {
-			output_line(0, "Syntax error in `%s', line %d",
+		fun.arg_info[i] = parse_type(&str);
+		if (fun.arg_info[i] == NULL) {
+			output_line(0, "Syntax error in `%s', line %d"
+                                    ": unknown argument type",
 				    filename, line_no);
 			return NULL;
 		}
@@ -161,8 +216,10 @@ static struct function *process_line(char *buf)
 		} else if (*str == ')') {
 			continue;
 		} else {
-			output_line(0, "Syntax error in `%s', line %d",
-				    filename, line_no);
+			if (str[strlen(str) - 1] == '\n')
+				str[strlen(str) - 1] = '\0';
+			output_line(0, "Syntax error in `%s', line %d at ...\"%s\"",
+				    filename, line_no, str);
 			return NULL;
 		}
 	}
